--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 									<h2><a href="https://github.com/liya101/Customer-Segmentation-using-RFM-and-Clustering/blob/main/Customer%20Segmentation%20-%20RFM%20and%20Clustering%20(2).ipynb">Customer Segmentation based on RFM using ML</a></h2>
 									<p>In this project, I have calculated R, F and M parameters for an online E-commerce shop. K-means , Agglomerative and DBSCAN clustering models were built and their performance were compared based on performance indexes. Furthermore Marketing strategies were also provided for each cluster.</p>
 								</header>
-								<a href="https://github.com/liya101/Customer-Segmentation-using-RFM-and-Clustering/blob/main/Customer%20Segmentation%20-%20RFM%20and%20Clustering%20(2).ipynb" class="image main"><img src="images/Customer image.jpg" alt="" /></a>
+								<a href="https://github.com/liya101/Customer-Segmentation-using-RFM-and-Clustering/blob/main/Customer%20Segmentation%20-%20RFM%20and%20Clustering%20(2).ipynb" class="image main"><img src="images/photo-1601600576337-c1d8a0d1373c.avif" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="https://github.com/liya101/Customer-Segmentation-using-RFM-and-Clustering/blob/main/Customer%20Segmentation%20-%20RFM%20and%20Clustering%20(2).ipynb" class="button large">View Project</a></li>
 								</ul>
